--- a/src/components/Cards/Cards.css
+++ b/src/components/Cards/Cards.css
@@ -21,7 +21,7 @@
     border-top-right-radius: 3px;
 }
 
-.card title{
+.card .title{
     font-weight: 600;
     font-size: 18px;
     margin-top: -7px;
@@ -33,10 +33,15 @@
 }
 
 .card .content{
-    padding: 9px;
+    padding: 12px;
+}
+
+.card .content p{
+     margin-top: 15px;
 }
 
 .card button{
+    margin-top: 15px;
     background-color: rgb(29, 162, 214);
     border: none;
     cursor: pointer;
