--- a/src/components/Newsapp/Newsapp.css
+++ b/src/components/Newsapp/Newsapp.css
@@ -79,3 +79,71 @@ nav ul{
      font-size: 24px;
      padding: 25px;
 }
+
+@media(max-width:768px){
+        nav{
+           flex-direction: column;
+           align-items: center;
+           justify-content: center;
+        }
+        nav h1{
+            font-size: 35px;
+        }
+        nav ul{
+            font-size: 20px;
+            margin-top: 4px;
+            margin-bottom: 4px;
+        }
+        nav input{
+              width: 50%;
+        }
+        .search-bar{
+              flex-direction: row;
+              align-items: center;
+              width: 100%;
+              margin-top: 8px;
+              margin-left: 50%;
+        }
+        .category-btns button{
+              width: 100px;
+              font-size: 16px;
+        }
+        .heading{
+             font-size: 20px;
+             padding: 15px;
+        }
+}
+
+@media(max-width:375px){
+     nav{
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+     }
+     nav h1{
+         font-size: 30px;
+     }
+     nav ul{
+         font-size: 15px;
+         margin-top: 4px;
+         margin-bottom: 4px;
+     }
+     nav input{
+           width: 50%;
+     }
+     .search-bar{
+           flex-direction: row;
+           align-items: center;
+           width: 100%;
+           margin-top: 8px;
+           margin-left: 38%;
+     }
+     .category-btns button{
+           width: 60px;
+           font-size: 12px;
+     }
+     .heading{
+          font-size: 20px;
+          padding: 15px;
+     }
+}
