edit and replace css values

--- a/src/components/Newsapp/Newsapp.css
+++ b/src/components/Newsapp/Newsapp.css
@@ -81,6 +81,11 @@ nav ul{
 }
 
 @media(max-width:768px){
+        html,
+        body{
+           width: 100%;
+           overflow-x: hidden;
+        }
         nav{
            flex-direction: column;
            align-items: center;
@@ -114,7 +119,7 @@ nav ul{
         }
 }
 
-@media(max-width:375px){
+@media(max-width:425px){
      nav{
         flex-direction: column;
         align-items: center;
@@ -139,7 +144,7 @@ nav ul{
            margin-left: 38%;
      }
      .category-btns button{
-           width: 60px;
+           width: 70px;
            font-size: 12px;
      }
      .heading{
